src/components/Market/css/item.css
.item {
  width: 100%;
  background-color: white;
  border-radius: 0.6vh;
  padding-top: 0.8vh;
  padding-bottom: 1.8vh;
}

.items-container{
  justify-content: center;
}

.item-header-container {
  width: 100%;
  display: flex;
  justify-content: center;
}

.item-info {
  width: 90%;
}

.item-name {
  font-size: 1.29vh;
  font-weight: 800;
  color: #4a4a4a;
}

.item-exterior {
  font-size: 1.1vh;
  color: #4a4a4a;
}

.item-image-container {
  width: 100%;
  display: flex;
  justify-content: center;
}

.item-image > img {
  width: 12.5vh;
  height: auto;
}

.item-price-container {
  width: 100%;
  display: flex;
  justify-content: center;
}

.item-price > h1 {
  font-size: 2vh;
  font-weight: 700;
  color: #4a4a4a;
}

.button-container {
  width: 100%;
  display: flex;
  justify-content: center;
  margin-top: 0.8vh;
}

.button-container > button {
  width: 5.5vw;
  height: 3vh;

  color: white;
  border: none;
  border-radius: 0.5vh;
  border: solid 0.25vh #7b2cbf;
  background-color: #7b2cbf;
  font-size: 1.5vh;
  font-weight: 600;
  letter-spacing: 0.2vh;
  cursor: pointer;
}

.item-wear-container {
  width: 100%;
  display: flex;
  justify-content: center;
  margin-top: 1vh;
}

.item-wear-pointer {
  width: 100%;
  margin-top: -3px;
  position: absolute;
  padding-bottom: 4px;
}

.item-wear-pointer-icon {
  text-align: center; /*bullshit code, just remove this line (line.84)*/
}

.item-wear {
  width: 100%;
}

.item-wear-text {
  font-size: 1vh;
  display: flex;
  justify-content: center;
  color: #4a4a4a;
  margin-bottom: 0.3vh;
}

.wear-bar-container {
  width: 100%;
  display: flex;
  justify-content: center;
}

.wear-bar {
  display: flex;
  width: 80%;
  height: 0.5vh;
}

.fn {
  width: 7%;
  background-color: green;
  border-radius: 2px 0px 0px 2px;
}

.mw {
  width: 8%;
  background-color: #5cb85c;
}

.ft {
  width: 23%;
  background-color: #f0ad4e;
}

.ww {
  width: 7%;
  background-color: #d9534f;
}

.bs {
  width: 55%;
  background-color: #993a38;
  border-radius: 0px 2px 2px 0px;
}

